--- a/app/src/main/res/layout/cropview_circle.xml
+++ b/app/src/main/res/layout/cropview_circle.xml
@@ -1,23 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="400dp">
 
-    <com.takusemba.cropme.CropLayout
-        android:id="@+id/crop_view_circle"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:cropme_background_alpha="80%"
-        app:cropme_frame_height_percent="80%"
-        app:cropme_frame_width_percent="80%"
-        app:cropme_max_scale="3.0"
-        app:cropme_overlay_shape="circle"
-        app:cropme_with_border="true"
-        app:layout_constraintDimensionRatio="h,1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+<com.theartofdev.edmodo.cropper.CropImageView
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:id="@+id/crop_view_circle"
+    app:cropScaleType="centerCrop"
+    app:cropShape="oval"
+    app:cropAspectRatioY="2"
+    app:cropAspectRatioX="2"
+    android:layout_width="match_parent"
+    android:layout_height="400dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
