--- a/app/src/main/res/layout/fragment_profil_modify.xml
+++ b/app/src/main/res/layout/fragment_profil_modify.xml
@@ -43,41 +43,55 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/profile_modify_pic_imageview"
-                android:src="@drawable/ic_pref_holiday_clicked"
-                android:layout_marginTop="24dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="92dp"
-                android:layout_height="92dp"/>
-
-            <ProgressBar
-                android:visibility="invisible"
-                android:id="@+id/profile_modify_pb"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="24dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <mehdi.sakout.fancybuttons.FancyButton
-                android:layout_marginTop="16dp"
-                fancy:fb_defaultColor="@color/colorPrimary"
-                fancy:fb_radius="5dp"
-                fancy:fb_text="@string/share_profile"
-                android:paddingVertical="6dp"
-                android:paddingHorizontal="24dp"
-                fancy:fb_textColor="@android:color/white"
+            <LinearLayout
                 android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/profile_modify_pic_imageview"
-                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/profile_modify_ll_main"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/profile_modify_share_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/profile_modify_pic_imageview"
+                    android:src="@drawable/ic_pref_holiday_clicked"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="92dp"
+                    android:layout_height="92dp"/>
+
+                <ProgressBar
+                    android:visibility="gone"
+                    android:id="@+id/profile_modify_pb"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <mehdi.sakout.fancybuttons.FancyButton
+                    android:layout_marginTop="16dp"
+                    fancy:fb_defaultColor="@color/colorPrimary"
+                    fancy:fb_radius="5dp"
+                    fancy:fb_text="@string/share_profile"
+                    android:paddingVertical="6dp"
+                    android:paddingHorizontal="24dp"
+                    fancy:fb_textColor="@android:color/white"
+                    android:gravity="center"
+                    app:layout_constraintTop_toBottomOf="@id/profile_modify_pic_imageview"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/profile_modify_share_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
 
             <TextView
                 android:id="@+id/profile_modify_name_appearance"
@@ -90,7 +104,7 @@
                 android:drawableStart="@drawable/ic_profile_name_to_appear"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/profile_modify_share_btn"
+                app:layout_constraintTop_toBottomOf="@id/profile_modify_ll_main"
                 android:layout_marginTop="36dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
