--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -113,7 +113,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:id="@+id/timenote_day_month"
-        android:text="10\nAug"
+        android:text="10Aug.\n15:45"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/separator_2"
@@ -137,10 +137,10 @@
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="104dp"
         android:id="@+id/timenote_time"
-        android:text="15:25"
+        android:text="11Aug.\n12:30"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
