--- a/app/src/main/res/layout/fragment_near_by.xml
+++ b/app/src/main/res/layout/fragment_near_by.xml
@@ -26,12 +26,14 @@
         android:text="Tel Aviv"
         android:id="@+id/nearby_place"
         android:textSize="17sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="@android:color/white"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toTopOf="@id/map"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"/>
 
     <TextView
