--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -35,15 +36,23 @@
 
         </LinearLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/profile_cl"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/profile_nbr_followers"
         android:text="654"
         android:textColor="@color/colorText"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_ll"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -85,8 +94,8 @@
     <ImageView
         android:id="@+id/profile_calendar_btn"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_ll"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_event_note_black_24dp"
         android:layout_width="wrap_content"
@@ -95,12 +104,12 @@
     <ImageView
         android:id="@+id/profile_pic_imageview"
         android:src="@drawable/ic_pref_holiday_clicked"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_ll"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="92dp"
-        android:layout_height="92dp"/>
+        android:layout_width="108dp"
+        android:layout_height="108dp"/>
 
     <TextView
         android:id="@+id/profile_location"
@@ -121,8 +130,8 @@
         fancy:fb_defaultColor="@android:color/holo_orange_dark"
         fancy:fb_radius="5dp"
         fancy:fb_text="@string/modify"
-        android:paddingVertical="6dp"
-        android:paddingHorizontal="24dp"
+        android:paddingVertical="4dp"
+        android:paddingHorizontal="18dp"
         fancy:fb_textColor="@android:color/white"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/profile_location"
@@ -148,7 +157,7 @@
         app:layout_constraintEnd_toStartOf="@id/profile_arrow_forward_btn"
         android:id="@+id/profile_arrow_back_btn"
         android:src="@drawable/ic_arrow_back_black_24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/profile_desc"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
@@ -158,7 +167,7 @@
         app:layout_constraintEnd_toStartOf="@id/profile_view_type_btn"
         android:id="@+id/profile_arrow_forward_btn"
         android:src="@drawable/ic_arrow_forward_black_24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/profile_desc"
         app:layout_constraintStart_toEndOf="@id/profile_arrow_back_btn"
         android:layout_width="wrap_content"
@@ -167,8 +176,8 @@
 
     <ImageView
         android:id="@+id/profile_view_type_btn"
-        android:src="@drawable/ic_view_list_black_24dp"
-        android:layout_marginTop="24dp"
+        android:src="@drawable/ic_view_module_black_24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@id/profile_filter_btn"
         app:layout_constraintTop_toBottomOf="@id/profile_desc"
         app:layout_constraintStart_toEndOf="@id/profile_arrow_forward_btn"
@@ -178,12 +187,13 @@
     <ImageView
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/profile_filter_btn"
-        android:src="@drawable/ic_view_module_black_24dp"
-        android:layout_marginTop="24dp"
+        android:src="@drawable/logo"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/profile_desc"
         app:layout_constraintStart_toEndOf="@id/profile_view_type_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:tint="@color/black"
+        android:layout_width="22dp"
+        android:layout_height="22dp"/>
 
     <TextView
         app:layout_constraintTop_toBottomOf="@id/profile_arrow_back_btn"
@@ -191,18 +201,20 @@
         android:layout_marginTop="8dp"
         style="@style/AppTheme.Divider.Toolbar"/>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_gravity="bottom"
         android:id="@+id/profile_rv"
-        android:background="#20aaaaaa"
+        android:background="#105A599D"
         android:paddingBottom="12dp"
         android:clipToPadding="false"
         tools:listitem="@layout/item_profile_timenote_list_style"
-        app:layout_constraintTop_toBottomOf="@+id/view_demarcation"
+        app:layout_constraintTop_toBottomOf="@+id/profile_cl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
