--- a/app/src/main/res/layout/item_timenote_recent.xml
+++ b/app/src/main/res/layout/item_timenote_recent.xml
@@ -44,6 +44,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <ImageView
+            android:src="@drawable/ic_linkedin"
+            android:id="@+id/timenote_recent_pic_user_imageview"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/timenote_recent_title"
+            android:layout_width="18dp"
+            android:layout_height="18dp"/>
+
+        <TextView
+            android:shadowDy="1"
+            android:shadowDx="1"
+            android:shadowRadius="1.5"
+            android:shadowColor="@android:color/black"
+            android:id="@+id/timenote_recent_username"
+            android:layout_marginStart="8dp"
+            tools:text="Samuel"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@id/timenote_recent_pic_user_imageview"
+            app:layout_constraintTop_toBottomOf="@id/timenote_recent_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:shadowDy="1"
             android:shadowDx="1"
