--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="colorText">#000000</color>
     <color name="colorTextSecondary">#5A599D</color>
     <color name="colorTextThirdly">#4A90E2</color>
+    <color name="colorBackgroundForward">#103700B3</color>
+    <color name="colorBackgroundBackward">#10EC407A</color>
 
 </resources>
