--- a/app/src/main/res/layout/fragment_preview_timenote_created.xml
+++ b/app/src/main/res/layout/fragment_preview_timenote_created.xml
@@ -30,13 +30,14 @@
     </LinearLayout>
 
     <ImageView
+        android:scaleType="centerCrop"
         android:background="@android:color/white"
         android:id="@+id/preview_created_timenote_pic_imageview"
         app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_ll"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="250dp"/>
 
     <TextView
         android:shadowDy="1"
@@ -45,7 +46,6 @@
         android:shadowColor="@android:color/black"
         android:id="@+id/preview_created_timenote_title"
         android:textSize="18sp"
-        android:text="BEACH PARTY"
         android:textColor="@android:color/white"
         android:textAllCaps="true"
         android:layout_marginStart="16dp"
@@ -60,78 +60,77 @@
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="16dp"
         android:layout_marginStart="104dp"
         android:id="@+id/preview_created_timenote_year"
-        android:text="2020"
         android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@id/separator_1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_pic_imageview"
+        app:layout_constraintTop_toTopOf="@id/separator_1"
+        app:layout_constraintBottom_toBottomOf="@id/separator_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:background="@drawable/custom"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
         android:layout_marginBottom="8dp"
         android:id="@+id/separator_1"
-        android:background="@android:color/white"
         app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_day_month"
         app:layout_constraintStart_toEndOf="@id/preview_created_timenote_year"
         app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_pic_imageview"
-        android:layout_width="1dp"
+        android:layout_width="2dp"
         android:layout_height="48dp"/>
 
     <TextView
+        android:layout_marginHorizontal="8dp"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="8dp"
-        android:textStyle="bold"
         android:gravity="center"
         android:id="@+id/preview_created_timenote_day_month"
-        android:text="10\nAug"
         android:textColor="@android:color/white"
-        android:textSize="22sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/separator_2"
         app:layout_constraintStart_toEndOf="@id/separator_1"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_pic_imageview"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
+        app:layout_constraintTop_toTopOf="@id/separator_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:background="@drawable/custom"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
         android:layout_marginBottom="8dp"
         android:id="@+id/separator_2"
-        android:background="@android:color/white"
         app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_time"
         app:layout_constraintStart_toEndOf="@id/preview_created_timenote_day_month"
         app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_pic_imageview"
-        android:layout_width="1dp"
+        android:layout_width="2dp"
         android:layout_height="48dp"/>
 
     <TextView
+        android:layout_marginStart="8dp"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="104dp"
         android:id="@+id/preview_created_timenote_time"
-        android:text="15:25"
+        app:layout_constraintTop_toTopOf="@+id/separator_2"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/separator_2"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_pic_imageview"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -139,7 +138,6 @@
         android:id="@+id/preview_created_timenote_place"
         android:drawablePadding="8dp"
         android:drawableStart="@drawable/ic_profile_from"
-        android:text="Gare de Marseille St-Charles"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_pic_imageview"
         app:layout_constraintStart_toStartOf="parent"
