--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -83,7 +83,6 @@
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="16dp"
         android:layout_marginStart="104dp"
         android:id="@+id/timenote_year"
         android:text="2020"
@@ -91,7 +90,8 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/separator_1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintBottom_toBottomOf="@id/separator_1"
+        app:layout_constraintTop_toTopOf="@id/separator_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -110,7 +110,6 @@
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:id="@+id/timenote_day_month"
         android:text="10Aug.\n15:45"
@@ -118,7 +117,8 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/separator_2"
         app:layout_constraintStart_toEndOf="@id/separator_1"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
+        app:layout_constraintTop_toTopOf="@id/separator_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -137,7 +137,6 @@
         android:shadowDx="1"
         android:shadowRadius="1.5"
         android:shadowColor="@android:color/black"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="104dp"
         android:id="@+id/timenote_time"
         android:text="11Aug.\n12:30"
@@ -145,7 +144,8 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/separator_2"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_pic_imageview"
+        app:layout_constraintTop_toTopOf="@id/separator_2"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
