--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -22,8 +22,8 @@
             android:id="@+id/action_profile_to_notifications"
             app:destination="@id/notifications" />
         <action
-            android:id="@+id/action_profile_to_collapFragment"
-            app:destination="@id/collapFragment" />
+            android:id="@+id/action_profile_to_filterProfile"
+            app:destination="@id/filterProfile" />
     </fragment>
     <fragment
         android:id="@+id/profilModify"
@@ -60,7 +60,8 @@
         android:label="fragment_notification_manager"
         tools:layout="@layout/fragment_notification_manager" />
     <fragment
-        android:id="@+id/collapFragment"
-        android:name="com.timenoteco.timenote.garbage.CollapFragment"
-        android:label="CollapFragment" />
+        android:id="@+id/filterProfile"
+        android:name="com.timenoteco.timenote.FilterProfile"
+        android:label="fragment_filter_profile"
+        tools:layout="@layout/fragment_filter_profile" />
 </navigation>
