--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,52 +3,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     tools:context=".view.loginFlow.Login">
 
-    <EditText
+    <ImageView
+        android:scaleType="centerCrop"
+        android:src="@drawable/beach"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <TextView
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="Email"
-        android:id="@+id/login_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="72dp"
+        android:text="Timenote"
+        android:textColor="@color/white"
+        android:textSize="72sp"
+        android:id="@+id/timenote_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <EditText
-        app:layout_constraintTop_toBottomOf="@id/login_email"
+    <TextView
+        android:text="Don't miss anything important"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/timenote_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="Password"
-        android:id="@+id/login_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <Button
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_password"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login" />
-
-    <Button
+    <mehdi.sakout.fancybuttons.FancyButton
+        fancy:fb_defaultColor="@android:color/white"
+        fancy:fb_radius="90dp"
+        fancy:fb_text="Sign In"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button"
+        fancy:fb_textColor="@color/colorText"
+        android:paddingVertical="6dp"
+        android:paddingHorizontal="48dp"
+        android:layout_marginBottom="72dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:id="@+id/button1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Signin" />
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
