--- a/app/src/main/res/layout/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout/fragment_nearby_filters.xml
@@ -14,6 +14,7 @@
         <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
             <TextView
+                android:id="@+id/nearby_filter_label"
                 style="@style/AppTheme.Toolbar.Title"
                 android:text="@string/filters" />
 
