--- a/app/src/main/res/layout/fragment_preference_sub_category.xml
+++ b/app/src/main/res/layout/fragment_preference_sub_category.xml
@@ -45,7 +45,9 @@
         </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_margin="12dp"
+                android:paddingHorizontal="8dp"
+                android:clipToPadding="false"
+                android:layout_marginVertical="8dp"
                 tools:listitem="@layout/item_pref_sub_category_chip"
                 android:id="@+id/pref_sub_category_rv_chips"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +61,7 @@
                 android:id="@+id/how_much_do_you_like_it"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="24dp"
                 android:text="@string/how_much_do_you_like_it"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
