--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -3,25 +3,185 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
+    <ImageView
+        android:scaleType="centerCrop"
+        android:src="@drawable/beach"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_height="match_parent"/>
 
-    <Button
-        android:id="@+id/sign"
-        android:text="sign"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <androidx.cardview.widget.CardView
+        app:cardElevation="0dp"
+        android:id="@+id/signup_cv"
+    app:cardBackgroundColor="#90FFFFFF"
+        app:cardCornerRadius="10dp"
+        android:background="@android:color/holo_red_dark"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="72dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@android:color/transparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"
+                android:text="Timenote Connection"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:id="@+id/signup_status"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/signup_signup_info"
+                android:visibility="invisible"
+                android:layout_marginTop="4dp"
+                android:layout_marginHorizontal="16dp"
+                tools:text="Fill in all the fields in order to create your account"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/signup_status"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_marginTop="12dp"
+                android:layout_marginHorizontal="16dp"
+                android:textSize="14sp"
+                android:text="Email"
+                android:id="@+id/email_label"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toBottomOf="@id/signup_signup_info"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <EditText
+                android:backgroundTint="@color/white"
+                android:layout_marginHorizontal="12dp"
+                android:hint="Email"
+                android:id="@+id/signup_mail"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/email_label"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/signup_password_label"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:text="Password"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/signup_mail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <EditText
+                android:backgroundTint="@color/white"
+                android:layout_marginHorizontal="12dp"
+                android:hint="Password"
+                android:textSize="14sp"
+                android:id="@+id/signup_password"
+                app:layout_constraintTop_toBottomOf="@id/signup_password_label"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_marginHorizontal="16dp"
+                android:text="Forgotten password ?"
+                android:layout_marginTop="4dp"
+                android:textSize="12sp"
+                android:id="@+id/signup_forgotten_password"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/signup_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <mehdi.sakout.fancybuttons.FancyButton
+                fancy:fb_defaultColor="@android:color/white"
+                fancy:fb_radius="90dp"
+                fancy:fb_text="Sign In"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/signup_forgotten_password"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/signup_signup_btn"
+                fancy:fb_textColor="@color/colorText"
+                android:paddingVertical="6dp"
+                android:paddingHorizontal="48dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:id="@+id/signup_signin_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+            <mehdi.sakout.fancybuttons.FancyButton
+                fancy:fb_defaultColor="@android:color/transparent"
+                fancy:fb_borderWidth="2dp"
+                fancy:fb_borderColor="@color/white"
+                fancy:fb_radius="90dp"
+                fancy:fb_text="Sign Up"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/signup_forgotten_password"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/signup_signin_btn"
+                fancy:fb_textColor="@color/white"
+                android:paddingVertical="6dp"
+                android:paddingHorizontal="48dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:id="@+id/signup_signup_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/signup_as_guest"
+        android:shadowDy="1"
+        android:shadowDx="1"
+        android:shadowRadius="1.5"
+        android:shadowColor="@android:color/black"
+        android:textAllCaps="true"
+        android:layout_marginHorizontal="16dp"
+        android:text="Or enter as a guest"
+        android:layout_marginTop="12dp"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signup_cv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
