--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,8 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.timenoteco.timenote.androidView.CollapsibleToolbar xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.timenoteco.timenote.androidView.CollapsibleToolbar
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/motionLayout"
                 xmlns:fancy="http://schemas.android.com/apk/res-auto"
@@ -235,8 +234,7 @@
             </com.timenoteco.timenote.androidView.CollapsibleToolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <androidx.core.widget.NestedScrollView
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/scrollable"
             android:layout_width="match_parent"
