--- a/app/src/main/res/layout/item_pref_filter_chip.xml
+++ b/app/src/main/res/layout/item_pref_filter_chip.xml
@@ -6,11 +6,12 @@
     tools:text="Avec Alarme"
     android:layout_margin="4dp"
     app:mcv_backgroundColor="@color/white"
-    app:mcv_textColor="@color/colorPrimary"
-    app:mcv_selectedTextColor="@color/white"
-    app:mcv_selectedBackgroundColor="@color/colorPrimary"
-    app:mcv_strokeColor="@color/colorPrimary"
+    app:mcv_textColor="@color/black"
+    app:mcv_selectedTextColor="@color/colorPrimary"
+    app:mcv_selectedBackgroundColor="@android:color/white"
+    app:mcv_strokeColor="@android:color/darker_gray"
     app:mcv_strokeSize="1dp"
+    app:mcv_cornerRadius="10dp"
     app:mcv_closable="false"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
