--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -121,7 +121,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 fancy:fb_defaultColor="@android:color/white"
                 fancy:fb_radius="90dp"
-                fancy:fb_text="Sign In"
+                fancy:fb_text="Login"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/signup_forgotten_password"
                 app:layout_constraintStart_toStartOf="parent"
