--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -152,6 +152,7 @@
 
 
                     <mehdi.sakout.fancybuttons.FancyButton
+                        android:visibility="visible"
                         android:id="@+id/profile_modify_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -166,6 +167,46 @@
                         fancy:fb_radius="5dp"
                         fancy:fb_text="@string/modify"
                         fancy:fb_textColor="@android:color/white" />
+
+
+                    <mehdi.sakout.fancybuttons.FancyButton
+                        android:visibility="invisible"
+                        android:layout_marginStart="68dp"
+                        fancy:fb_defaultColor="@android:color/white"
+                        fancy:fb_borderWidth="1dp"
+                        fancy:fb_borderColor="@color/colorPrimary"
+                        fancy:fb_radius="5dp"
+                        android:layout_marginTop="16dp"
+                        fancy:fb_text="FOLLOW"
+                        android:paddingVertical="6dp"
+                        android:paddingHorizontal="30dp"
+                        fancy:fb_textColor="@color/colorPrimary"
+                        android:gravity="center"
+                        app:layout_constraintEnd_toStartOf="@id/profile_message_btn"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/profile_location"
+                        android:id="@+id/profile_follow_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                    <mehdi.sakout.fancybuttons.FancyButton
+                        android:visibility="invisible"
+                        fancy:fb_defaultColor="@color/colorPrimary"
+                        fancy:fb_radius="5dp"
+                        android:layout_marginTop="16dp"
+                        fancy:fb_text="@string/message"
+                        android:paddingVertical="6dp"
+                        android:paddingHorizontal="30dp"
+                        fancy:fb_textColor="@color/white"
+                        android:gravity="center"
+                        android:layout_marginEnd="68dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/profile_follow_btn"
+                        app:layout_constraintTop_toBottomOf="@id/profile_location"
+                        android:id="@+id/profile_message_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
 
                     <TextView
