--- a/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
@@ -17,6 +17,9 @@
         <action
             android:id="@+id/action_nearBy_to_detailedTimenote"
             app:destination="@id/detailedTimenote" />
+        <action
+            android:id="@+id/action_nearBy_to_profile"
+            app:destination="@id/profile" />
     </fragment>
     <fragment
         android:id="@+id/nearbyFilters"
@@ -39,5 +42,13 @@
         <action
             android:id="@+id/action_detailedTimenote_to_comments"
             app:destination="@id/comments" />
+    </fragment>
+    <fragment
+        android:id="@+id/profile"
+        android:name="com.timenoteco.timenote.view.profileFlow.Profile"
+        android:label="Profile" >
+        <argument
+            android:name="whereFrom"
+            app:argType="boolean" />
     </fragment>
 </navigation>
