--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -24,15 +24,15 @@
         <action
             android:id="@+id/action_profile_to_filterProfile"
             app:destination="@id/filterProfile" />
+        <argument
+            android:name="whereFrom"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </fragment>
     <fragment
         android:id="@+id/profilModify"
         android:name="com.timenoteco.timenote.view.profileFlow.ProfilModify"
-        android:label="ProfilModify" >
-        <action
-            android:id="@+id/action_profilModify_to_profile"
-            app:popUpTo="@id/profile" />
-    </fragment>
+        android:label="ProfilModify" />
     <fragment
         android:id="@+id/profileCalendar"
         android:name="com.timenoteco.timenote.view.profileFlow.ProfileCalendar"
@@ -61,7 +61,7 @@
         tools:layout="@layout/fragment_notification_manager" />
     <fragment
         android:id="@+id/filterProfile"
-        android:name="com.timenoteco.timenote.view.profileFlow.FilterProfile"
+        android:name="com.timenoteco.timenote.view.profileFlow.ProfileSorting"
         android:label="fragment_filter_profile"
         tools:layout="@layout/fragment_filter_profile" />
 </navigation>
